--- a/web/src/index.html
+++ b/web/src/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Mono:300" rel="stylesheet">
   <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet" type="text/html">
+  <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9"
+  crossorigin="anonymous"></script>
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
